Refactored code. Added GOG Galaxy support. Controller input now leaves All Games List as intended.

--- a/PC Dashboard/MVVM/View/TileWindowView.xaml
+++ b/PC Dashboard/MVVM/View/TileWindowView.xaml
@@ -15,7 +15,9 @@
     <Grid>
         <ListView Style="{StaticResource GameTileList}" 
                   ItemsSource="{Binding AllGames}"
+                  x:Name="TileListView"
                   Focusable="False"
-                  IsTabStop="False"/>
+                  IsTabStop="False"
+                  FocusManager.IsFocusScope="True"/>
     </Grid>
 </UserControl>
