Added Epic Games Store support, partially. Began EA Launcher support. Added default no-image image for tile. Added check if launcher is installed before importing.

--- a/PC Dashboard/MainWindow.xaml
+++ b/PC Dashboard/MainWindow.xaml
@@ -107,7 +107,9 @@
                         BorderBrush="#1f74ad">
                         <RadioButton Content="Exit"
                                      IsTabStop="True"
-                                     Style="{StaticResource MenuButtonTheme}"/>
+                                     Style="{StaticResource MenuButtonTheme}"
+                                     Command="{Binding ExitProgramCommand}"
+                                     CommandParameter="{Binding ElementName=_mainWindow}"/>
                     </Border>
                 </StackPanel>
             </Grid>
