--- a/PC Dashboard/MVVM/View/SearchView.xaml
+++ b/PC Dashboard/MVVM/View/SearchView.xaml
@@ -4,8 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PC_Dashboard.MVVM.View" 
+             xmlns:viewModel="clr-namespace:PC_Dashboard.MVVM.ViewModel" 
+             d:DataContext="{d:DesignInstance Type=viewModel:SearchViewModel, IsDesignTimeCreatable=True}"
              mc:Ignorable="d" 
              d:DesignHeight="900" d:DesignWidth="1800">
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -15,11 +18,11 @@
             <RowDefinition/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0">
+        <Border Grid.Row="0" Width="auto" VerticalAlignment="Center">
             <Border.Background>
                 <LinearGradientBrush>
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="BlueViolet" Offset="1"/>
+                    <GradientStop Color="#FF060F25" Offset="0"/>
+                    <GradientStop Color="#FF2B60E2" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
             <TextBox Grid.Row="0"
@@ -29,15 +32,15 @@
                      IsTabStop="False"
                      Focusable="True"
                      VerticalContentAlignment="Center"
-                     HorizontalAlignment="Stretch"
+                     HorizontalAlignment="Left"
                      Margin="10, 10, 5, 10"
                      Grid.Column="1"
-                     Style="{StaticResource TextInputBox}"/>
+                     Text="{Binding StringFilter, UpdateSourceTrigger=PropertyChanged}"/>
         </Border>
         <ListView Style="{StaticResource GameTileList}"
                   Grid.Row="1"
-                  ItemsSource="{Binding AllGames}"
-                  x:Name="TileListView"
+                  ItemsSource="{Binding FilteredList}"
+                  x:Name="SearchListView"
                   Focusable="False"
                   IsTabStop="False"
                   FocusManager.IsFocusScope="True"/>
