--- a/PC Dashboard/MVVM/View/TileWindowView.xaml
+++ b/PC Dashboard/MVVM/View/TileWindowView.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PC_Dashboard.MVVM.View" 
-             xmlns:viewModel="clr-namespace:PC_Dashboard.MVVM.ViewModel"
+             xmlns:ViewModel="clr-namespace:PC_Dashboard.MVVM.ViewModel" 
+             d:DataContext="{d:DesignInstance Type=ViewModel:AllGamesViewModel, IsDesignTimeCreatable=True}"
              mc:Ignorable="d" 
              d:DesignHeight="1080" d:DesignWidth="1920">
 
