--- a/PC Dashboard/App.xaml
+++ b/PC Dashboard/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="Theme/GameListTheme.xaml"/>
                 <ResourceDictionary Source="Theme/GameTile.xaml"/>
                 <ResourceDictionary Source="Theme/TextEntryBlockTheme.xaml"/>
+                <ResourceDictionary Source="Theme/ScreenDisplay.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
                 <view:HomeView/>
